tests/NormalTests/paczka1/fuzzy1/65692966.err
Error in line 3: Q6hIn S267 9,9
Error in line 15: Q6hIn A326 35,4
Error in line 17: jrQFZs A326 91,6
